deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uptime-kuma
    component: uptime-kuma
  name: uptime-kuma-deployment
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
      component: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: uptime-kuma
        component: uptime-kuma
    spec:
      containers:
      - image: louislam/uptime-kuma:1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - node
            - extra/healthcheck.js
          failureThreshold: 3
          initialDelaySeconds: 180
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 30
        name: app
        ports:
        - containerPort: 3001
          name: 3001tcp02
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /app/data
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: uptime
