deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: uptime.support.tools
    external-dns.alpha.kubernetes.io/ttl: "120"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/cluster-issuer-duration: "8760h"
    cert-manager.io/cluster-issuer-email: "mmattox@support.tools"
    cert-manager.io/issue-temporary-certificate: "true"    
  labels:
    app: longhorn
  name: public-lb
  namespace: uptime-kuma
spec:
  rules:
  - host: uptime.support.tools
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma-service
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - uptime.support.tools
    secretName: public-lb-tls
